--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
-        "preline": "^2.7.0"
+        "@material-tailwind/react": "^2.1.10",
+        "preline": "^2.7.0",
+        "react-icons": "^5.4.0",
+        "uuid": "^11.0.5",
+        "xlsx": "^0.18.5"
     }
 }
