--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "dependencies": {
         "@heroicons/react": "^2.2.0",
         "@material-tailwind/react": "^2.1.10",
-        "preline": "^2.7.0",
+        "chart.js": "^4.4.7",
+        "framer-motion": "^12.4.2",
+        "react-chartjs-2": "^5.3.0",
         "react-icons": "^5.4.0",
-        "uuid": "^11.0.5",
+        "react-toastify": "^11.0.3",
         "xlsx": "^0.18.5"
     }
 }
