--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@heroicons/react": "^2.2.0",
         "@material-tailwind/react": "^2.1.10",
         "chart.js": "^4.4.7",
+        "chartjs-plugin-datalabels": "^2.2.0",
         "framer-motion": "^12.4.2",
         "react-chartjs-2": "^5.3.0",
         "react-icons": "^5.4.0",
