--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "framer-motion": "^12.4.2",
         "react-chartjs-2": "^5.3.0",
         "react-icons": "^5.4.0",
+        "react-spinners": "^0.15.0",
         "react-toastify": "^11.0.3",
         "xlsx": "^0.18.5"
     }
